ggplot2 0.7  (2008-XX-XX)
----------------------------------------

  * qplot: Better error messages when needed variables are missing
  * Complete rewrite of theming system
  * New discrete position scales
  * Arguments to geom_jitter changed to height and width to match other position adjustments
  * Fixed bug in remove_missing function will resulted incorrect calculations of some statistics when missing values were present
  * geom_boxplot: previously was not displaying outliers if only one present
  * geom_jitter: setting one jitter direction to 0 now works
  * position_jitter now deals correctly with 0 jitter
  * Direct access to plot options via $ is now disabled
  * ggsave: fixed bug where current device was closed if an error occured
  * scale_gradientn: create colour scale from any list of colours
  * scales: any point outside of limits is dropped (this was previously the behaviour for discrete scales, but not continuous scales)
  * improve error message for too many values in domain
  * legends now don't appear when aesthetics are mapped to NULL to set to fixed position
  * legends now respect fixed parameters of the layer
  * scales: major rewrite of internals:
    * all categorical scales accept breaks argument
    * continuous position scale now has minor_breaks argument which controls position of minor breaks
    * xend and yend now transformed correctly
    * limits are consistent across discrete and continuous scales (limits c(1, NA) form no longer works for continuous scales)
  * all discrete scales have limits and labels argument to better control legends
  * character and logical vectors now reliably treated as discrete scales
  * can use color instead of colour, and old R names throughout ggplot2
  * qplot now gains asp argument to set aspect ratio
  * scales: extra scales now correctly ignored (again)
  * scale_size: improved documentation for discrete variables