@@ -13,7 +13,7 @@ geom_boxplot <- GeomBoxplot$build_accessor()
 geom_contour <- GeomContour$build_accessor()
 geom_crossbar <- GeomCrossbar$build_accessor()
 geom_density <- GeomDensity$build_accessor()
-geom_density_2d <- GeomDensity2d$build_accessor()
+geom_density2d <- GeomDensity2d$build_accessor()
 geom_errorbar <- GeomErrorbar$build_accessor()
 geom_histogram <- GeomHistogram$build_accessor()
 geom_hline <- GeomHline$build_accessor()
@@ -122,7 +122,7 @@ stat_bin <- StatBin$build_accessor()
 stat_boxplot <- StatBoxplot$build_accessor()
 stat_contour <- StatContour$build_accessor()
 stat_density <- StatDensity$build_accessor()
-stat_density_2d <- StatDensity2d$build_accessor()
+stat_density2d <- StatDensity2d$build_accessor()
 stat_function <- StatFunction$build_accessor()
 stat_identity <- StatIdentity$build_accessor()
 stat_qq <- StatQq$build_accessor()
